# PLA

./: .env.example  .gitignore  .mcp.json  DESIGN.md  README.md  package.json  pnpm-lock.yaml  skills-lock.json  tsconfig.json
.claude/skills/: cosmic
.opencode/: opencode.json
anchor/: .mocharc.json  Anchor.toml  Cargo.toml  build.sh  cargo-build-sbf-wrapper.sh  package-lock.json  package.json  run-test.sh  rust-toolchain.toml  test.sh  tsconfig.json
anchor/programs/peaceleague/: Cargo.toml
anchor/programs/peaceleague/src/: lib.rs
anchor/programs/peaceleague/src/instructions/: create_campaign.rs  donate.rs  initialize.rs  mod.rs  withdraw.rs
anchor/programs/peaceleague/src/states/: campaign.rs  mod.rs  program_state.rs
anchor/tests/: peaceleague.ts
app/: global-error.tsx  home-client.tsx  layout.tsx  loading.tsx  page.tsx  providers.tsx
app/about/: page.tsx
app/blog/: page.tsx
components/: logo.tsx
contexts/: ContextProvider.tsx
docs/: FRONTEND_PROMPT.md  FUNDUS_REFERENCE.md  ONBOARDING.md  analytics-events.md  frontend-light-dark-readability-plan.md  frontend-qa-report.md  frontend-rebuild-plan.md
graphify-out/: GRAPH_REPORT.md  fundus_reference.json  graph.html  graph.json  tutorial_concepts.json
hooks/: useCampaigns.ts
lib/: actions-client.ts  actions.ts  analytics.ts  animations.ts  campaigns.ts  copy.ts  cosmic.ts  idl.json  peaceleague-client.ts  peaceleague-idl.ts  program.test.ts  program.ts  solana-config.ts  solana-rpc.ts  types.ts
scripts/: backfill-campaign-links.js  init-state.js
styles/: globals.css
types/: campaign.ts
(+82 files in other folders)
