[package]
name = "peaceleague"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anchor-lang = "0.32"

[features]
default = []
anchor-debug = []
idl-build = ["anchor-lang/idl-build"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"